[project]
name = "2dfan-autosign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "drissionpage==4.1.0.12",
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
]
[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "requirements.txt" }]